import PromoCardTestCases from "../PromoCardTestCases";
import testRunner from "../../../Services/testRunner/testRunner";

PromoCardTestCases.map(testRunner);
